第二次提交

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
         <div class="pannel-footer"></div>
       </div>
       <div class="pannel pie">
-        <h2 class="title">柱状图</h2>
+        <h2 class="title">饼状图</h2>
         <div class="chart"></div>
         <div class="pannel-footer"></div>
       </div>
